{{$NEXT}}
- ReadTrace::clear_destination no longer removes the trace directory,
  it just empties it; this makes looking for files via
  File::ChangeNotify much simpler

1.6       2012-10-24 15:28:25 Europe/London
- die if undef or '' is passed as a destination to ReadTrace's methods

1.5       2012-10-19 17:00:42 Europe/London
- avoid a "defined-or", it's not strictly necessary and breaks ancient
  perls

1.4       2012-09-03 21:00:19 Europe/London
- lesson learned: never change your versioning scheme!

1.3.1     2012-09-03 11:44:11 Europe/London
- ::TraceOnly broke ->connect, fixed now

1.3       2012-09-03 11:37:23 Europe/London
- ->connect dies if the brokers returns an ERROR frame

1.2       2012-07-12 17:46:58 Europe/London
- new method "clear_destination" on ReadTrace
- make TraceOnly really always trace
- accept destinations not starting with "/" in ReadTrace

1.1       2012-07-10 12:10:01 Europe/London
- added ReconnectOnFailure, and moved some attributes around
- 'connect' can now be called multiple times, and is a no-op if we're
  already connected

BREAKING CHANGES:
- 'tries_per_server' is gone (was not used)
- 'connect_retry_delay' is moved to the new role

1.0       2012-03-24 11:02:54 Europe/London
- first non-devel release

0.1_01    2012-03-14 11:49:53 Europe/London
- Initial release
